test/parse/assert/assertinvalid-binary-module.txt
;;; FLAGS: --spec
(assert_invalid (module "\00ASM") "bad magic")
(module)
(;; STDOUT ;;;
assert_invalid error:
  out/test/parse/assert/assertinvalid-binary-module.txt:2:18: error in binary module: @0x00000004: bad magic value
(assert_invalid (module "\00ASM") "bad magic")
                 ^^^^^^
;;; STDOUT ;;)
